[tool.poetry]
name = "deployment"
version = "0.1.0"
description = ""
authors = ["BarG3126 <bar3126@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
loguru = "^0.7.2"
pydantic-settings = "^2.3.3"
sqlalchemy = "^2.0.30"
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = [
    "WPS430",  # Ignore found nested function
    "WPS503",  # Ignore useless returning `else` statement
]
